--- a/package.json
+++ b/package.json
@@ -5,5 +5,15 @@
     "scripts": {
     "start": "node server/server.js",
     "heroku-postbuild": "cd client && npm install && npm run build && cp -r dist/* ../server/public"
+    },
+    "dependencies": {
+    "express": "^4.18.2"
+    },
+    "devDependencies": {
+    "concurrently": "^9.1.0",
+    "nodemon": "^3.1.7"
+    },
+    "engines": {
+        "node": ">=14.0.0"
     }
 }
