--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Deployment to Heroku",
     "scripts": {
     "start": "node server/server.js",
-    "heroku-postbuild": "cd client && npm install && npm run build && cp -r dist/* ../server/public"
+    "heroku-postbuild": "npm install --include=dev --prefix client && npm run build --prefix client && cp -r client/dist/* server/public"
     },
     "dependencies": {
     "express": "^4.18.2"
