--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
     "description": "Deployment to Heroku",
     "scripts": {
     "start": "node server/server.js",
-    "heroku-postbuild": "npm install --include=dev --prefix client && npm run build --prefix client && cp -r client/dist/* server/public"
+    "heroku-postbuild": "npm install --include=dev --prefix client && npm install --prefix server && npm run build --prefix client && cp -r client/dist/* server/public"
     },
     "dependencies": {
-    "express": "^4.18.2"
-    },
-    "devDependencies": {
+    "express": "^4.18.2",
     "concurrently": "^9.1.0",
     "nodemon": "^3.1.7"
     },
