--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "bootstrap-vue-3": "^0.5.1",
-    "vue": "^3.5.12"
-  },
-  "devDependencies": {
+    "vue": "^3.5.12",
     "@vitejs/plugin-vue": "^5.1.4",
     "typescript": "~5.6.2",
     "vite": "^5.4.10",
