--- a/client/package.json
+++ b/client/package.json
@@ -6,16 +6,25 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:unit": "jest"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "bootstrap-vue-3": "^0.5.1",
-    "vue": "^3.5.12",
-    "@vitejs/plugin-vue": "^5.1.4",
     "typescript": "~5.6.2",
     "vite": "^5.4.10",
+    "vue": "^3.5.12",
     "vue-tsc": "^2.1.8"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@vitejs/plugin-vue": "^5.2.0",
+    "@vitest/ui": "^2.1.5",
+    "@vue/test-utils": "^2.4.6",
+    "jest": "^29.7.0",
+    "jsdom": "^25.0.1",
+    "vitest": "^2.1.5"
   }
 }
