--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:server": "nodemon server.js --ignore '../client/'",
-    "start:client": "npm run serve --prefix '../client/'",
+    "start:server": "nodemon server.js --ignore ../client/",
+    "start:client": "npm run dev --prefix ../client/",
     "dev": "concurrently \"npm run start:server\" \"npm run start:client\""
   },
   "keywords": [],
