--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
     "version": "1.0.0",
     "description": "Deployment to Heroku",
     "scripts": {
-    "start": "node server/server.js",
-    "heroku-postbuild": "npm install --include=dev --prefix client && npm install --prefix server && npm run build --prefix client && cp -r client/dist/* server/public"
+        "start": "node server/server.js",
+        "heroku-build": "npm run build --prefix client && rimraf server/public/* && cpx client/dist/**/* server/public"
     },
     "dependencies": {
-    "express": "^4.18.2",
-    "concurrently": "^9.1.0",
-    "nodemon": "^3.1.7"
+        "express": "^4.18.2",
+        "nodemon": "^3.1.7"
     },
     "engines": {
         "node": ">=14.0.0"
