--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
-    "bootstrap-vue-3": "^0.5.1",
+    "bootstrap-vue-next": "^0.26.3",
     "typescript": "~5.6.2",
     "vite": "^5.4.10",
     "vue": "^3.5.12",
@@ -27,6 +27,7 @@
     "@vue/test-utils": "^2.4.6",
     "jest": "^29.7.0",
     "jsdom": "^25.0.1",
+    "unplugin-vue-components": "^0.27.4",
     "vitest": "^2.1.5"
   }
 }
