--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,13 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-vue-next": "^0.26.3",
     "typescript": "~5.6.2",
     "vite": "^5.4.10",
     "vue": "^3.5.12",
+    "vue-router": "^4.4.5",
     "vue-tsc": "^2.1.8"
   },
   "devDependencies": {
