--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
         "heroku-build": "npm run build --prefix client && rimraf server/public/* && cpx client/dist/**/* server/public"
     },
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "body-parser": "^1.20.3",
         "concurrently": "^9.1.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
+        "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.8.2",
         "nodemon": "^3.1.7"
     },
