--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "1.0.0",
     "description": "Deployment to Heroku",
     "scripts": {
-        "heroku-build": "npm run build --prefix client && rimraf server/public/* && cpx client/dist/**/* server/public"
+        "heroku-build": "npm run build --prefix client && rimraf server/public/* && cpx client/dist/**/* server/public",
+        "dev": "concurrently \"npm run start:server --prefix ./server\" \"npm run start:client --prefix ./server\""
     },
     "dependencies": {
         "bcrypt": "^5.1.1",
