--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
         "dev": "concurrently \"npm run start:server --prefix ./server\" \"npm run start:client --prefix ./server\""
     },
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.749.0",
+        "@aws-sdk/s3-request-presigner": "^3.749.0",
+        "aws-sdk": "^2.1692.0",
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.3",
         "concurrently": "^9.1.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
-        "express": "^4.21.1",
+        "express": "^4.21.2",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.8.2",
+        "multer": "^1.4.5-lts.1",
+        "multer-s3": "^3.0.1",
         "nodemon": "^3.1.7"
     },
     "engines": {
