--- a/server/.gitignore
+++ b/server/.gitignore
@@ -13,6 +13,7 @@ pnpm-debug.log*
 
 # Environment files (include sensitive data like API keys)
 /.env
+/.env.test
 
 # Build and distribution directories
 /dist
