--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,15 @@
   "description": "Back-end for ACAO website",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test-coverage": "jest --coverage",
     "start:server": "nodemon server.js --ignore ../client/",
     "start:client": "npm run dev --prefix ../client/",
     "dev": "concurrently \"npm run start:server\" \"npm run start:client\""
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "setupFiles": ["<rootDir>/jest.setup.js"]
   },
   "keywords": [],
   "author": "",
@@ -22,10 +27,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "supertest": "^7.0.0"
   }
 }
