--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:watch": "vitest --watch",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
@@ -24,7 +25,8 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
-    "@vitejs/plugin-vue": "^5.2.0",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vitest/coverage-v8": "^2.1.5",
     "@vitest/ui": "^2.1.5",
     "@vue/test-utils": "^2.4.6",
     "jest": "^29.7.0",
