--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
   },
   "jest": {
     "testEnvironment": "node",
-    "setupFiles": ["<rootDir>/jest.setup.js"]
+    "setupFiles": [
+      "<rootDir>/jest.setup.js"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -29,6 +31,7 @@
     "express": "^4.21.2",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb-memory-server": "^10.1.4",
     "mongoose": "^8.8.2",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
