--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,17 @@
     "test": "vitest",
     "test:watch": "vitest --watch",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage"
+    "test:coverage": "vitest --coverage",
+    "cy:open": "cypress open"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@vitejs/plugin-vue": "^5.2.3",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-vue-next": "^0.26.3",
     "typescript": "~5.6.2",
+    "unplugin-vue-components": "^28.4.1",
     "vite": "^5.4.10",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
@@ -25,13 +28,12 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
-    "@vitejs/plugin-vue": "^5.2.1",
     "@vitest/coverage-v8": "^2.1.5",
     "@vitest/ui": "^2.1.5",
     "@vue/test-utils": "^2.4.6",
+    "cypress": "^14.2.0",
     "jest": "^29.7.0",
     "jsdom": "^25.0.1",
-    "unplugin-vue-components": "^0.27.4",
     "vitest": "^2.1.5"
   }
 }
